css/style.css
/* ... */
.profile-text {
  position:relative;
  margin: auto;
}
.social-links{
  display: flex;
  align-items: center;
  justify-content: flex-start;
}
.social-links a{
  margin: 8px 16px;
}
.profile .social-links a{
  margin-left: 4px;
}
.social-links a i {
  font-size: 42px;
}
.profile-img-div {
  position: relative;
  z-index: 1;
}
.profile-img {
  height:0;
  width:0;
}
/*
======================
==     Portfolio    ==
======================
*/
.work {
  position: relative;
  margin: 0;
  padding: 10px;
  margin-bottom: 25px;
  width: 100%;
  border: none;
  overflow: hidden;
  box-sizing: border-box;
}
.img-carousel {
  height: 100%;
}
.work > a > img, .img-carousel-wrap > img {
  border: 1px #00000033 solid;
}
.work-overlay {
  font-size: 24px;
  position: absolute;
  bottom: 0px;
  width: 100%;
  text-align: center;
  position: inline;
  background-color: #008effee;
  transform: translateY(100%);
  opacity: 0;
  transition: .2s all;
  box-sizing: content-box;
}
.work:hover .work-overlay{
  transform: translateY(0);
  opacity: 1;
}
.work-links {
  padding: 12px;
}
.work-links a {
  color: #ffefff;
}
.work-overlay h3 {
  font-family: Oswald, sans-serif;
  font-weight: 400;
  font-size: 40px;
  color: #ffefff;
  text-shadow: -1px -1px #000e00;
}
.work-overlay i {
  margin: 8px;
}
.link-strip {
  margin-top: 60px;
  margin-bottom: 30px;
  font-size:24px;
  color: #ffefff;
  background-color: #008eff;
  text-align: center;
  padding: 12px 12px 40px 12px;
}
.link-strip h2{
  font-size: 24px;
}
.divider {
  padding: 24px;
  text-align: center;
  color: #7100ff;
  font-weight: 400;
  font-size: 12px;
  margin-bottom: 20px;
}
/*
==========================
==         Work         ==
==========================
*/
.works{
  max-width: 1280px;
  margin: auto;
}
.work-main h6 {
  color: #000eff;
}
.work-description {
  padding: 12px;
}
.work-display-links a {
  font-size: 20px;
  margin-right: 10px;
  color: #7100ff;
}
.description-header {
  font-weight: 500;
}
#features-and-technologies {
  display: flex;
  justify-content: center;
  padding: 12px 16px;
  background-color: #eeefee;
  margin-top: 45px;
}
.work-ul {
  flex-basis: 50%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
}
.work-ul h3 {
  margin-bottom: 0;
}
.work-ul li {
  list-style: square;
}
.back-to-portfolio {
  padding: 25px 0 60px 0;
  text-align: center;
}
.back-to-portfolio > a {
  color: #000eff;
  font-size: 15px;
}
.work-display-links a:last-child, .work-display-links:last-child a i {
  color: #008eff;
}
/*
==========================
==         About        ==
==========================
*/
.about-section-text h3 {
  margin-left: 16px;
}
.about-section-text p {
  padding: 0 16px 16px 16px;
  font-size: 18px;
}
.about-section-text p:last-child {
  margin-bottom: 68px;
}
#technologies-used {
  background-color: #eeefee;
  padding: 4px 8px 16px 8px;
  text-align: center;
}
.technologies {
  margin: auto;
  width: 85%;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-around;
}
.technology {
  font-size: 16px;
  flex-basis: 25%;
  text-align: center;
  margin-bottom: 16px;
}
.technology img {
  max-width: 128px;
  margin-bottom: 0;
}
/*
===================
==     Footer    ==
===================
*/
footer {
  background-color: #333eff;
  text-align: center;
  color: #ffefff;
}
#footer-info, #footer-message{
  padding: 8px;
}
#footer-message {
  padding-bottom: 0;
  margin-bottom: 0;
}
footer h2 {
  margin-bottom: 12px;
}
footer a {
  color: #ffefff;
  text-decoration: underline;
}
footer a i {
  font-size: 44px;
  text-decoration: none;
  margin: 16px;
  color: #ffefff;
}
.send-message {
  font-size: 24px;
  font-family: Caveat, cursive;
}
footer label {
  margin-top: 8px;
  float: left;
  padding: 1px;
}
footer input[type=email], footer textarea{
  width: 100%;
  font-size: 16px;
  margin: 0;
  margin-left: -1px;
  padding: 6px 0;
}
input[type=submit]{
  margin-top: 12px;
}
.copyright {
  padding: 20px;
  font-size: 12px;
  font-weight: 400;
}
/*
=======================
==     Message-Me    ==
=======================
*/
#message-me {
  visibility: hidden;
  z-index: 5;
  position: fixed;
  right: 32px;
  bottom: 32px;
  background-color: #7100ff;
  color: #ffefff;
  font-size: 44px;
  padding: 10px 18px 12px;
  border-radius: 50%;
  box-shadow: 1px 1px 6px #000e00;
}
#message-me a {
  padding: 0;
  margin: 0;
  height: 0;
}
/*
=============================
==     Message Outcome     ==
=============================
*/
#message-outcome{
  padding: 24px;
  text-align: center;
}
#redirect {
  color: #333eff;
}
.message-response {
  padding-bottom: 65px;
  padding-top: 45px;
}
/*
================================
==     Company Logo Colors    ==
================================
*/
.social-links .fa-linkedin{
  color:#000eff;
}
.social-links .fa-github{
  color:#7100ff;
}
footer .fa-github:hover{
  color: #211F1F;
}
.fa-linkedin:hover{
  color: #0e76a8;
}
@media only screen and (min-width: 440px){
  .corner{
    width: 220px;
    height: 220px;
  }
}
@media only screen and (min-width: 600px){
  .corner{
    width: 280px;
    height: 280px;
  }
  .profile{
    flex-direction: row;
    justify-content: space-around;
    padding-bottom: 56px;
  }
  .profile-text{
    margin: 0;
  }
  .social-links {
    margin-bottom: 0;
  }
  .profile-img-div{
    margin: 0;
  }
  .profile-img {
    margin-top:16px;
    margin-top:24px;
    height:auto;
    width: 224px;
    border-radius: 1%;
    position: relative;
    z-index: 1;
    box-shadow: -1px -1px 4px #000e00;
  }
  .link-strip h2{
    font-size: 28px;
  }
}
/* ... */

